<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#fbfbfb"
    tools:context="joaopedrosegurado.com.br.biblow.LoginActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="70dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:hint="@string/matricula"
            android:paddingLeft="40dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:id="@+id/login"
            android:textColor="#777"
            />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_person"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="70dp">
        <EditText
            android:textColor="#777"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:paddingLeft="40dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:id="@+id/senha"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_secure"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_login_shape"
        android:textColor="#fff"
        android:onClick="fazLogin"
        android:text="@string/entrar" />



</LinearLayout>
